exports[`as a function 1`] = `
"
import dedent from \"../macro\";

dedent(\`
  some stuff
\`);

      ↓ ↓ ↓ ↓ ↓ ↓

\"some stuff\";
"
`;

exports[`as a template string 1`] = `
"
import dedent from \"../macro\";

dedent\`
  some stuff
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"some stuff\";
"
`;

exports[`evaluated 1`] = `
"
import dedent from \"../macro\";
import one from \"../external\";

dedent\`
  1 + 1 = \${one + one}
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import one from \"../external\";

\`1 + 1 = \${one + one}\`;
"
`;

exports[`explicit newline 1`] = `
"
import dedent from \"../macro\";

dedent\`
  <p>
    Hello world!
  </p>

\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"<p>\\n  Hello world!\\n</p>\";
"
`;

exports[`expressions 1`] = `
"
import dedent from \"../macro\";

dedent\`
  first line
    second
    third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"first line\\n  second\\n  third\";
"
`;

exports[`multiple indentations 1`] = `
"
import dedent from \"../macro\";

dedent\`
    first
      second
          third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"first\\n  second\\n      third\";
"
`;
